--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dictionary-storage-api",
+  "name": "dictionary-storage-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -18,7 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:generate": "npx typeorm-ts-node-esm migration:generate src/migrations/migration -d dist/dataSource/dataSource.js",
+    "migration:run": "npx typeorm-ts-node-esm migration:run -d dist/dataSource/dataSource.js",
+    "migration:perform": "docker exec app npm run migration:generate && npm run migration:run"
   },
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
