--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:generate": "npx typeorm-ts-node-esm migration:generate src/migrations/migration -d dist/dataSource/dataSource.js",
-    "migration:run": "npx typeorm-ts-node-esm migration:run -d dist/dataSource/dataSource.js",
+    "migration:generate": "npx typeorm-ts-node-esm migration:generate src/migrations/migration -d dist/database/data-source.js",
+    "migration:run": "npx typeorm-ts-node-esm migration:run -d src/database/data-source.ts",
     "migration:perform": "docker exec app npm run migration:generate && npm run migration:run"
   },
   "dependencies": {
